--- a/src/index.css
+++ b/src/index.css
@@ -54,3 +54,22 @@ body {
     cursor: pointer;
   }
 }
+
+.linkButton {
+   
+  &:disabled {
+    background-color: var(--slate-200);
+    color: var(--slate-700);
+    cursor: not-allowed;
+    opacity: 0.6;
+  }
+}
+
+a.active {
+  font-weight: bold}
+
+.errorMessage {
+  color: var(--red-600);
+  text-align: center;
+  font-size: 50px;
+}
